# bits-prd

./: README.md  pyproject.toml
bits_prd/src/: __init__.py  code_prd.py  steering_vectors.py  utils.py
bits_prd/test/: __init__.py  test_code_prd.py
bits_prd/test/data/: RX0100FRA_R_20261241729_00U_01S_MO.rnx  RX01_nmea.txt  RX0200FRA_R_20261241729_00U_01S_MO.rnx  RX02_nmea.txt  TLSG00FRA_R_20261240000_01D_MN.rnx
