[project]
name = "bits_prd"
version = "1.0.0"
authors = [
  {name = "Enki Saura", email = "esaura@ikosconsulting.com"},
]
maintainers = [
  {name = "Enki Saura", email = "esaura@ikosconsulting.com"}
]
description = "This is an awesome script !"
dependencies = [
    "baguette_in_the_sky>=0.1.0", # Available at https://github.com/enkisaura/Baguette-In-The-Sky.git
    "pandas",
    "numpy",
    "tqdm",
]
requires-python = ">= 3.12"


[tool.pytest.ini_options]
testpaths = ["bits_prd/test"] # Test directory
python_files = ["test_*.py"] # Test files
python_classes = ["Test*"] # Test class
python_functions = ["test_*"] # Test functions
norecursedirs = [".*", "build", "dist", "venv", "env", "__pycache__", "test_data"] # Not included directories
